#9 fix border color for dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,7 @@ html[data-theme="dark"] {
   --button-icon-hover-background-color: #191919;
   --button-section-hover-background-color: #191919;
 
+  --field-border-color: #222222;
   --field-focus-border-color: #cc7d24;
   --field-invalid-border-color: #f87171;
 
